added more notes